fix(web/serverlog): fixed text visibility on light theme

--- a/web/serverLog.html
+++ b/web/serverLog.html
@@ -195,7 +195,7 @@
     <div class="col-xl-9 col-lg-12 card-containers override-bootstrap">
         <div class="card border-primary">
             <div class="card-body p-3" style="position: relative">
-                <pre id="logContainer" class="thin-scroll pre-log-content text-white {{[(it.isWebInterface), '', 'nui-height']|ternary}}"></pre>
+                <pre id="logContainer" class="thin-scroll pre-log-content {{[(it.isWebInterface), '', 'nui-height']|ternary}}"></pre>
                 <div id="autoScrollDiv">
                     <a id="autoScrollBtn" class="d-none" href="#"><span></span><span></span><span></span></a>
                 </div>
